--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class= 'container'> 
             
                 <ul class="nav nav-pills">
-                    <li> <a href=#> Home </a> </li>
-                    <li> <a href=#> About Me </a> </li>
-                    <li> <a href=#> Work Experience </a> </li>
-                    <li> <a href=#> Athletics </a> </li>
+                    <li> <a href="home.html"> Home </a> </li>
+                    <li> <a href="about_me.html"> About Me </a> </li>
+                    <li> <a href="work_experience.html"> Work Experience </a> </li>
+                    <li> <a href="athletics.html"> Athletics </a> </li>
                 </ul>
             </div>
         </div>
