--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 		</div>
 		<nav class="top-nav">
 			<ul class="top-nav nav_list">
-				<li><a href="portfolio.html">Meets</a></li>
+				<li><a href="not_ready.html">Meets</a></li>
 				<li class="page-scroll"><a href="#about">About</a></li>
 				<li class="logo page-scroll"><a title="Cimran Virdi" href="index.html">
                     <img src="/images/logo.png" alt="" class="responsive" style="
     height: 60px;
 ">
                     </a></li>
-			    <li class="page-scroll"><a href="athletics.html">athletics</a></li>
+			    <li class="page-scroll"><a href="not_ready.html">athletics</a></li>
 				<li class="page-scroll"><a href="#contact">contact</a></li>
 			</ul>
 			<a href="#" id="pull"><img src="/images/nav-icon.png" title="menu" /></a>
