--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</div>
 		<nav class="top-nav">
 			<ul class="top-nav nav_list">
-				<li><a href="not_ready.html">Meets</a></li>
+				<li><a href="not_ready.html">Projects</a></li>
 				<li class="page-scroll"><a href="#about">About</a></li>
 				<li class="logo page-scroll"><a title="Cimran Virdi" href="index.html">
                     <img src="/images/logo.png" alt="" class="responsive" style="
