--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 	<div class="row footer">
 		<div class="col-md-8 contact_left">
 			<h3>Contact</h3>
-            <p>Please feel free to email me at 
-            <i class="fa fa-envelope"></i><a href="mailto:cimranvirdi@gmail.com">cimranvirdi [at] gmail [dot] com</a>
+            <p>Please feel free to email me at  
+           <a href="mailto:cimranvirdi@gmail.com"> <i class="fa fa-envelope"> </i> cimranvirdi [at] gmail [dot] com</a>
             </p>
 		</div>
 	</div>
