--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<h4> computer scientist & pole vaulter </h4>
             <p> I am a senior at the Massachusetts Institute of Technology. In June 2016, I will graduate with a Bachelors in Computer Science and a Concentration in Philosophy. </br></br>
             
-            In addition to attending MIT, I am currently training to compete at the highest level with the goal of competing on the Canadian National team. To learn more about my athletic endeavours, please go to my <a href="athletics.html">Athletics</a> page.  </p>
+            In addition to attending MIT, I am currently training to compete at the highest level with the goal of competing on the Canadian National team. To learn more about my athletic endeavours, please go to my <a href="not_ready.html">Athletics</a> page.  </p>
 			<div class="soc_icons navbar-right">
 				<ul class="list-unstyled text-center">
 					<li><a href="https://www.facebook.com/cimranvirdi"><i class="fa fa-facebook"></i></a></li>
